fixed tasks mapping